# litmus

./: README.md  setup.cfg
.github/workflows/: actions.yml
litmus/: compose.py
notebooks/: example_module.py  examples.ipynb
tests/: expected_test_example_module.py  test_compose.py
