[metadata]
name = litmus
version = 1.0.1
author = Edward Johnson
description = Autogenerate pytest unit test skeletons from your existing modules.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/edwardcjohnson/litmus
project_urls =
    Bug Tracker = https://github.com/edwardcjohnson/litmus/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = litmus
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
